Bug 457208 - Closing when updating for the second time creates second job notification
Summary: Closing when updating for the second time creates second job notification
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 457622 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-27 15:19 UTC by Nicolas Fella
Modified: 2022-08-08 12:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-07-27 15:19:20 UTC
STEPS TO REPRODUCE
1. Start an update
2. Close the window
3. Open window from SNI
4. Close again

OBSERVED RESULT
Two notifications about the update progress

EXPECTED RESULT
Only one notification about the update process


SOFTWARE/OS VERSIONS
KDE Plasma Version: master
KDE Frameworks Version: master
Qt Version: 5.15.5-kde
Comment 1 Nate Graham 2022-07-27 20:04:22 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2022-07-28 00:56:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/340
Comment 3 Nate Graham 2022-07-29 14:54:21 UTC
Git commit 389725b6f57466fbdf9f73a00223f713ae5345c0 by Nate Graham, on behalf of Aleix Pol.
Committed on 29/07/2022 at 14:52.
Pushed by ngraham into branch 'master'.

Make sure the Job notification goes as we restore the view

Otherwise we get multiple of them.

M  +12   -3    discover/DiscoverObject.cpp
M  +1    -0    discover/DiscoverObject.h
M  +1    -1    libdiscover/backends/DummyBackend/DummyTransaction.cpp

https://invent.kde.org/plasma/discover/commit/389725b6f57466fbdf9f73a00223f713ae5345c0
Comment 4 Nicolas Fella 2022-08-08 12:23:46 UTC
*** Bug 457622 has been marked as a duplicate of this bug. ***