Make sure the Job notification goes as we restore the view

Otherwise we get multiple of them.

BUG: 457208